c4prj3_finish/grade.txt
Grading at Tue 06 Dec 2022 05:49:49 PM UTC
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 -c cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 -c deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 -c eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 -c future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 -c input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 -c main.c
main.c: In function ‘main’:
main.c:74:20: error: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘int’ [-Werror=format=]
   74 |     printf("Hand %zu won %u / %u times (%.2f%%)\n", i, winCnts[i], num_trials, (((float)winCnts[i])/num_trials)*100);
      |                  ~~^                                ~
      |                    |                                |
      |                    long unsigned int                int
      |                  %u
main.c:74:32: error: format ‘%u’ expects argument of type ‘unsigned int’, but argument 4 has type ‘size_t’ {aka ‘long unsigned int’} [-Werror=format=]
   74 |     printf("Hand %zu won %u / %u times (%.2f%%)\n", i, winCnts[i], num_trials, (((float)winCnts[i])/num_trials)*100);
      |                               ~^                                   ~~~~~~~~~~
      |                                |                                   |
      |                                unsigned int                        size_t {aka long unsigned int}
      |                               %lu
cc1: all warnings being treated as errors
make: *** [Makefile:6: main.o] Error 1
make failed

Overall Grade: F
